--- a/frontend/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/frontend/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -21,8 +21,8 @@
     height: 80%;
 }
 
-@media (max-width: 499px) {
+/* @media (max-width: 499px) {
     .DesktopOnly {
         display: none;
     }
-}
+} */
