--- a/frontend/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/frontend/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -13,6 +13,10 @@
     z-index: 90;
 }
 
+.Toolbar button {
+    justify-content: center;
+    margin-top: 20px;
+}
 .Toolbar nav {
     height: 100%;
 }
